target_sources(${fftw3_lib}
  PRIVATE
    codelet-dft.h
    ct.h
    dft.h
    bluestein.c
    buffered.c
    conf.c
    ct.c
    dftw-direct.c
    dftw-directsq.c
    dftw-generic.c
    dftw-genericbuf.c
    direct.c
    generic.c
    indirect-transpose.c
    indirect.c
    kdft-dif.c
    kdft-difsq.c
    kdft-dit.c
    kdft.c
    nop.c
    plan.c
    problem.c
    rader.c
    rank-geq2.c
    solve.c
    vrank-geq1.c
    zero.c)

add_subdirectory(scalar)
add_subdirectory(simd)