AM_CPPFLAGS = -I$(top_srcdir)/simd
noinst_LTLIBRARIES = libkernel.la

libkernel_la_SOURCES = align.c alloc.c assert.c awake.c ct.c debug.c	\
iabs.c md5.c md5-1.c minmax.c ops.c pickdim.c plan.c planner.c		\
primes.c print.c printers.c problem.c rader.c scan.c scanners.c		\
solver.c solvtab.c square.c stride.c tensor.c tensor1.c tensor2.c	\
tensor3.c tensor4.c tensor5.c tensor7.c tensor8.c timer.c trig.c	\
twiddle.c version.c cycle.h ifftw.h

