AM_CPPFLAGS = -I$(top_srcdir)/simd
noinst_LTLIBRARIES = libkernel.la

libkernel_la_SOURCES = align.c alloc.c assert.c awake.c buffered.c	\
ct.c debug.c hash.c iabs.c md5.c md5-1.c minmax.c ops.c pickdim.c	\
plan.c planner.c primes.c print.c problem.c rader.c scan.c solver.c	\
solvtab.c square.c stride.c tensor.c tensor1.c tensor2.c tensor4.c	\
tensor5.c tensor7.c tensor8.c tensor9.c timer.c transpose.c trig.c	\
trig1.c twiddle.c cycle.h ifftw.h
