noinst_LTLIBRARIES=libbench.la

libbench_la_SOURCES=accopy-from.c accopy-to.c acopy.c allocate.c	\
ascale.c aset.c bench-main.c caadd.c cacopy.c can-do.c cascale.c	\
caset.c casub.c ccopy-from.c ccopy-to.c copy-c2c-from.c copy-c2c-to.c	\
copy-c2h-1d-fftpack.c copy-c2h-1d-halfcomplex.c copy-c2h-1d-packed.c	\
copy-c2h-1d-unpacked-ri.c copy-c2h-unpacked.c copy-c2h.c copy-c2r.c	\
copy-c2ri.c copy-h2c-1d-fftpack.c copy-h2c-1d-halfcomplex.c		\
copy-h2c-1d-packed.c copy-h2c-1d-unpacked-ri.c copy-h2c-unpacked.c	\
copy-h2c.c copy-r2c.c copy-ri2c.c deallocate.c getopt-utils.c getopt.c	\
getopt1.c info.c log2.c main.c mflops.c ovtpvt.c pow2.c prime.c		\
problem.c report.c speed.c timer.c unnormalize.c util.c verify.c	\
zero.c bench-user.h bench.h getopt.h copy-r2c-unpacked.c		\
copy-r2c-packed.c copy-c2r-packed.c copy-c2r-unpacked.c mp.c


benchmark: all
	@echo "nothing to benchmark"
