noinst_LIBRARIES=libbench2.a

libbench2_a_SOURCES=allocate.c bench-main.c can-do.c caset.c dotens2.c	\
getopt-utils.c getopt.c info.c main.c mflops.c ovtpvt.c pow2.c		\
problem.c report.c speed.c tensor.c timer.c util.c verify-dft.c		\
verify-lib.c verify.c zero.c bench-user.h bench.h getopt.h verify.h

benchmark: all
	@echo "nothing to benchmark"

accuracy: all
	@echo "nothing to benchmark"

