noinst_LIBRARIES=libbench2.a

libbench2_a_SOURCES=allocate.c aligned-main.c bench-main.c can-do.c	\
aset.c caset.c dotens2.c getopt-utils.c getopt.c getopt1.c info.c	\
main.c mflops.c ovtpvt.c pow2.c problem.c report.c speed.c tensor.c	\
timer.c useropt.c util.c verify-dft.c verify-rdft2.c verify-r2r.c	\
verify-lib.c verify.c zero.c bench-user.h bench.h getopt.h verify.h

benchmark: all
	@echo "nothing to benchmark"

accuracy: all
	@echo "nothing to benchmark"

