noinst_LIBRARIES=libbench2.a

libbench2_a_SOURCES=aligned-main.c allocate.c aset.c bench-main.c	\
can-do.c caset.c dotens2.c info.c main.c mflops.c mp.c ovtpvt.c pow2.c	\
problem.c report.c speed.c tensor.c timer.c timer2.c useropt.c util.c	\
verify-dft.c verify-lib.c verify-r2r.c verify-rdft2.c verify.c zero.c	\
bench-user.h bench.h verify.h my-getopt.c my-getopt.h

benchmark: all
	@echo "nothing to benchmark"

accuracy: all
	@echo "nothing to benchmark"

